# core-rtt

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: copilot-instructions.md
.github/workflows/: autotest.yml  ci.yml
corelib/: Makefile  corelib.c  corelib.h  link.ld
corelib/autotest/: abort_immediately.c  crash_independency.json  deposit_withdraw.c  deposit_withdraw.json  fmt_str_behavior.c  fmt_str_behavior.json  forbidden_log_counterexample.json  heap.c  heap.json  log_quota.json  log_simple.c  log_simple.json  log_simple_custom_map.json  meta_all_non_default.c  meta_all_non_default.json  msg.c  msg.json  str_mem.c  str_mem.json  tiny_custom_map.c  tiny_custom_map.json
corelib/autotest/map/: clear.txt  cross.txt  non-rect.txt  resource.txt  tiny.txt
corelib/example/: base.c  harvester.c
corelib/test/: base.c  deposit_withdraw.c  dummy.c  heap.c  log_quota.c  manufact.c  misc.c  msg.c  unit_fight.c  unit_random_walk.c
docs/: api-spec.md  autotesting.md  corelib.md  execution-architecture.md  matching-rules.md  replay-binary-format.md  rule-spec.md  rules.md  rusty-corelib.md  service-architecture.md  tilemap-file-format.md  worker-communication.md
include/corertt/: buffer.h  build_config.h.in  cli.h  cli_common.h  draw_judge.h  entity.h  fail_fast.h  game_rules.h  log.h  noise.h  plain_ui.h  replay.h  runtime.h  stream_adapter.h  tile_codec.h  tilemap.h  tui.h  ui.h  world.h  xoroshiro.h
js/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
js/core-autotest/: package.json  tsconfig.json
js/core-autotest/src/: assertions.ts  case-spec.ts  cli.ts  fs-utils.ts  headless-runner.ts  main.ts  program-resolver.ts  types.ts
js/core-autotest/test/: assertions.spec.ts  case-spec.spec.ts  cli.spec.ts  headless-runner.spec.ts  program-resolver.spec.ts  smoke.spec.ts
js/core-worker/: .env.example  README.md  package.json  tsconfig.json
js/core-worker/src/: cache.ts  compression.ts  config.ts  fs-utils.ts  headless.ts  index.ts  logger.ts  main.ts  mock-server.ts  result.ts  scheduler.ts  types.ts  worker.ts
js/core-worker/test/: cache.spec.ts  result.spec.ts  scheduler.spec.ts  worker.e2e.spec.ts
js/corereplay/: README.md  package-lock.json  package.json  tsconfig.json
js/corereplay/src/: api.ts  decode.ts  decoder_core.ts  errors.ts  index.ts  stream.ts  types.ts
js/corereplay/src/internal/: byte_reader.ts  parse_end.ts  parse_header.ts  parse_tick.ts
js/corereplay/test/: decode.spec.ts  helpers.ts  streaming.spec.ts
js/glicko/: package.json  tsconfig.json
js/glicko/src/: index.ts
js/glicko/test/: glicko.spec.ts
js/replay-cli/: README.md  package-lock.json  package.json
js/replay-cli/src/: format.ts  main.ts
js/replay-cli/test/: cli.spec.ts  helpers.ts
js/web/: .env.example  .gitignore  README.md  drizzle.config.ts  nuxt.config.ts  package.json  pnpm-lock.yaml
js/web/app/: app.config.ts
js/web/app/assets/css/: main.css
js/web/app/components/admin/worker/: CreateModal.vue  DeleteButton.vue  ModifyButton.vue  SecretModal.vue
js/web/app/components/home/: TilemapExample.vue
js/web/app/components/layout/: LoginButton.vue
js/web/app/components/leaderboard/: ChallengeModal.vue
js/web/app/components/strategies/: Card.vue  Create.vue  EloChart.vue  Form.vue  GroupForm.vue  List.vue  RatingChart.vue
js/web/app/components/strategies/group/: Card.vue  Create.vue  List.vue
js/web/app/composables/: errorHandler.ts
js/web/app/layouts/: default.vue
js/web/app/lib/: auth-client.ts
js/web/app/middleware/: auth.global.ts
js/web/app/pages/: index.vue  leaderboard.vue  strategies.vue
js/web/app/pages/admin/: index.vue
js/web/app/pages/match/: [id].vue
js/web/app/plugins/: trpc.ts
js/web/app/types/: trpc.ts
js/web/scripts/: keyGen.ts
js/web/server/: env.ts
js/web/server/api/auth/: [...all].ts
js/web/server/api/trpc/: [trpc].ts
js/web/server/api/worker/: authenticate.post.ts  communication.ts
js/web/server/db/: db.ts  schema.ts
js/web/server/lib/: auth.ts  jwt.ts  makeId.ts  s3.ts  store.ts  workerTaskBroker.ts
js/web/server/trpc/: trpc.ts
js/web/server/trpc/routers/: elfFile.ts  index.ts  leaderboard.ts  match.ts  strategies.ts  strategyGroup.ts  worker.ts
js/worker-codec/: README.md  package.json
js/worker-codec/src/: index.ts
js/worker-codec/test/: codec.spec.ts
rusty-corelib/: .rustfmt.toml  API.md  Cargo.toml  README.md  link.ld
rusty-corelib/.cargo/: config.toml
rusty-corelib/autotest/: async_recv.json  async_scheduler_error.json  async_tasks.json  async_wait.json  deposit_withdraw.json  forbidden_log_counterexample.json  heap.json  log_simple.json  msg.json
rusty-corelib/examples/: abort_immediately.rs  async_recv.rs  async_scheduler_error.rs  async_tasks.rs  async_wait.rs  base.rs  deposit_withdraw.rs  heap.rs  hello_world.rs  log_simple.rs  msg.rs
rusty-corelib/src/: alloc_impl.rs  api.rs  async_rt.rs  error.rs  lib.rs  runtime.rs  syscall.rs  types.rs
scripts/: autotest.sh  format-c.sh  package.py
src/: buffer.cpp  cli_common.cpp  draw_judge.cpp  entity.cpp  game_rules.cpp  headless_main.cpp  log.cpp  main.cpp  noise.cpp  plain_ui.cpp  replay.cpp  runtime.cpp  stream_adapter.cpp  tile_codec.cpp  tilemap.cpp  tui.cpp  world.cpp  xoroshiro.cpp
src/cli/: headless_main.cpp  main.cpp  parser.cpp  replay_writer.cpp  world_loader.cpp
src/tools/: replay_log_extract.cpp
