[package]
name = "rusty-corelib"
version = "0.1.0"
edition = "2024"
description = "Rust no_std wrappers for Core RTT runtime ecalls"
license = "MIT"

[lib]
name = "rusty_corelib"
path = "src/lib.rs"
test = false

[features]
default = ["runtime", "allocator", "async"]
runtime = []
allocator = []
async = ["allocator"]

[dependencies]
bitflags = { version = "2.9.4", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
strip = true
